AX: CSS content property replacement text ignored when it is the empty string https://bugs.webkit.org/show_bug.cgi?id=270377 rdar://123919677

Reviewed by Antoine Quint.

This issue came to light as part of the <input type=checkbox switch>
demo, but is more universally applicable as shown in the tests.

While here, also cleanup some of the code as the render objects
involved cannot become null.

New web-platform-tests tests are exported:
https://github.com/web-platform-tests/wpt/pull/44971

* LayoutTests/accessibility/mac/alt-for-css-content-expected.txt:
* LayoutTests/accessibility/mac/alt-for-css-content.html:
* LayoutTests/imported/w3c/web-platform-tests/accname/name/comp_name_from_content-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/accname/name/comp_name_from_content.html:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textUnderElement const):

Canonical link: https://commits.webkit.org/275872@main